<resources>

    <string name="app_name">MsingiPACK </string>
    <string name="app_header">MsingiPACK Learning and Mobile Revision</string>
    <string name="welcome">Welcome </string>
    <string name="sub">Select Subject </string>
    <string name="splash">Splash Screen</string>
    <string name="login">Login Screen</string>
    <string name="menu">Main Menu</string>
    <string name="kcpe">KCPE Exams Screen</string>
    <string name="subjectTitle"> Choose Exam Subject</string>
    <string name="subjectYear"> Select Year of Exam</string>
    <string name="title_activity_splash">KCPE EXAM</string>
    <string name="main_menu">MsingiPACK Menu</string>
    <string name="exam_session">MsingiPACK - Exam Session</string>
    <string name="results_session">MsingiPACK - Exam Results</string>
    <string name="revision_session">MsingiPACK - Revision Session</string>
    <string name="spinner_title"></string>
    <string name="help_label">MsingiPACK - Help</string>
    <string name="subject">KCPE EXAM</string>
    <string name="help">Help</string>
    <string name="quit">Quit</string>
    <string name="scores_header">Your Score</string>
    <string name="scores_subject">Subject:</string>
    <string name="scores_noOfquestions">Number Of Questions : </string>
    <string name="scores_questionsAttempted">Questions Attempted : </string>
    <string name="scores_totalScore">Total Score : </string>
    <string name="question">Question</string>
    <string name="A">A.</string>
    <string name="B">B.</string>
    <string name="C">C.</string>
    <string name="D">D.</string>
    <string name="logout">Logout</string>
    <string name="next">Next</string>
    <string name="quit_exam">Finish</string>
    <string name="quit_revision">Quit</string>
    <string name="previous">Prev</string>
    <string name="no_questions">No more questions available. Try back later.</string>
    <string name="finish_exam">Exam Session</string>
    <string name="results">Exam Results</string>
    <string name="revision">Exam Revision</string>
    <string name="results_title">Your Score&#8230;</string>
    <string name="exam">Exam</string>
    <string name="no_of_questions">Number Of Questions :  </string>
    <string name="questions_answered">Questions Answered :  </string>
    <string name="unanswered_questions">Unanswered Questions : </string>
    <string name="correct_answers">Correct Answers :  </string>
    <string name="incorrect_answers">Incorrect Answers :  </string>
    <string name="percentage_score">Percentage Score :  </string>
    <string name="grade">Grade :  </string>
    <string name="remarks">Remarks :  </string>
    <string name="selected">You selected   </string>
    <string name="correct">The correct Answer is   </string>
    <string name="review_title">Answers and Explanations</string>
    <string name="review">Review your choices and explanations for the correct answers.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
     <string name="ndiyo">ndiyo</string>
    <string name="la">la</string>
    <string name="quitMsingiPACK"> Are you sure you want to Exit MsingiPACK ? </string>
     <string name="confirm_rpt"> Are you sure you want to clear all the reports? </string>
    <string name="explanation">Here is the explanation for the correct answer.</string>
    <string name="examfinish">Some questions are unanswered and will be marked as incorrect. Do you want to end the exam?</string>
     <string name="examfinish_swa">Baathi ya maswali hayajajibiwa na yatasahihishwa kama umekosa. Je unataka kumaliza mtihani?</string>
    <string name="qsatpfinish">Are you sure that you want to close the revision session?</string>
    <string name="qsatpfinish_swa">Uko nahakika unataka kufunga kipindi hichi cha maregeo?</string>
    <string name="description">MsingiPACK</string>
    <string name="app_logo_top">MsingiPACK</string>
    <string name="report">Performance Report</string>
    <string name="app_logo_bottom">Mobile Learning and Revision</string>
    <string name="app_version_info">Version 2.0.0\nCopyright © 2014 Virtual Essence Ltd. \nAll Rights Reserved.</string>

</resources>