<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/app_color">
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/TextViewTopTitle"
			android:text="@string/app_logo_top"
			android:textColor="@color/logo_color"
			android:layout_gravity="center_vertical"
			android:gravity="top|center"
			android:textSize="@dimen/logo_size">
		</TextView>
		<TableLayout
			android:id="@+id/TableLayout01"
			android:stretchColumns="*"
			android:layout_height="wrap_content"
			android:layout_width="match_parent">
			<TableRow
				android:id="@+id/TableRow01"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_gravity="center_vertical|center_horizontal">
				
				<ImageView
					android:id="@+id/ImageView2_Right"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical|center_horizontal"
					android:src="@drawable/msingipack1"
					android:contentDescription="@string/description">
				</ImageView>
			</TableRow>
			
		</TableLayout>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/TextViewBottomTitle"
			android:text="@string/app_logo_bottom"
			android:textColor="@color/logo_color"
			android:gravity="center"
			android:textSize="@dimen/logo2_size">		    
		</TextView>
		<TextView
			android:id="@+id/TextViewBottomVersion"
			android:text="@string/app_version_info"
			android:textSize="@dimen/version_size"
			android:textColor="@color/logo_color"
			android:layout_height="match_parent"
			android:lineSpacingExtra="@dimen/version_spacing"
			android:layout_width="match_parent"
			android:layout_gravity="center_vertical|center_horizontal"
			android:gravity="center"></TextView>
	</LinearLayout>