<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="5dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="0dp" >

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:isScrollContainer="true"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical" >

            <TextView
                android:id="@+id/tvrevisonNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal|center"
                android:gravity="top|left"
                android:shadowColor="@android:color/white"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="10"
                android:text="@string/question"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <WebView
                android:id="@+id/revison_quest_webview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </WebView>

          

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp" >
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="0dp"
                android:weightSum="6" >

                <Button
                    android:id="@+id/Button_Prev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:drawableTop="@drawable/previous"
                    android:text="@string/previous" >
                </Button>

                <Button
                    android:id="@+id/Button_Next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:drawableTop="@drawable/next"
                    android:text="@string/next" >
                </Button>

                <Button
                    android:id="@+id/Button_Quit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:drawableTop="@drawable/finish"
                    android:text="@string/quit_exam" >
                </Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>