<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white" >

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/linearLayout2"
        android:background="@android:color/white"
        android:isScrollContainer="true"
        android:scrollbars="vertical" >

        <RelativeLayout
            android:id="@+id/RelativeLayout01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="0dp"
            android:shadowColor="@android:color/white" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvquestionNumber1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@android:color/white"
                    android:text="@string/question"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <WebView
                    android:id="@+id/quest_web_view1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                </WebView>
            </LinearLayout>

            <TextView
                android:id="@+id/space"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@+id/linearLayout1" />
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="6" >

        <Button
            android:id="@+id/Button_Prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:drawableTop="@drawable/previous"
            android:text="@string/previous" >
        </Button>

        <Button
            android:id="@+id/Button_Next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:drawableTop="@drawable/next"
            android:text="@string/next" >
        </Button>

        <Button
            android:id="@+id/Button_Quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:drawableTop="@drawable/finish"
            android:text="@string/quit_exam" >
        </Button>
    </LinearLayout>

</RelativeLayout>