<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    android:orientation="vertical" >

    <!-- spaces -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="20dp" />

    <!-- Space -->

    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal" >

            <ImageView
                android:id="@+id/ImageView2_Right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:contentDescription="@string/description"
                android:src="@drawable/msingipack1" >
            </ImageView>
        </TableRow>
    </TableLayout>

    <!-- spaces -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="20dp" />

    <!-- Space -->

    <TextView
        android:id="@+id/TextViewBottomTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_logo_bottom"
        android:textColor="@color/logo_color"
        android:textSize="@dimen/logo2_size" >
    </TextView>

    <TextView
        android:id="@+id/TextViewBottomVersion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/version_spacing"
        android:text="@string/app_version_info"
        android:textColor="@color/logo_color"
        android:textSize="@dimen/version_size" >
    </TextView>

</LinearLayout>